# musings

./: .gitignore
boids/: Cargo.toml  README.md
boids/config/: bindings.ron  display.ron  flock.ron
boids/src/: boid.rs  boids.rs  components.rs  config.rs  main.rs  math.rs  types.rs  utils.rs
boids/src/space_partition/: mod.rs  space_bin.rs
boids/src/systems/: direct_boids.rs  mod.rs  move_boids.rs  partition_boids.rs
boids/src/systems/boid_rules/: base_rules.rs  mod.rs
boids_old/src/: camera.rs  main.rs
flood/: Cargo.toml
flood/assets/prefabs/: test_node.ron
flood/assets/textures/: circle.ron
flood/config/: bindings.ron  display.ron
flood/src/: main.rs
flood/src/prefabs/: mod.rs  node_prefab.rs
flood/src/states/: loading.rs  mod.rs  test.rs
flood/src/systems/: input.rs  mod.rs
flood/src/systems/location/: components.rs  mod.rs  sync_transform_with_location.rs
flood/src/systems/logistics/: components.rs  graph.rs  mod.rs  node_lifecycle.rs
flood/src/utils/: mod.rs
logistics/: Cargo.toml
logistics/src/: graph.rs  main.rs  network.rs
pong-amethyst/: Cargo.toml
pong-amethyst/src/: main.rs  pong.rs
pong-amethyst/src/systems/: bounce.rs  move_balls.rs  paddle.rs
