[package]
name = "boids"
version = "0.1.0"
authors = ["Zachary Smith <zsmith0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.15.3", features = [ "metal" ] }
serde = { version = "1", features = ["derive"] }
rand = "0.7.3"
